--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -10,9 +10,8 @@
     <button class="btn btn-sm btn-outline-primary" id="archived">Archived</button>
     <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a>
     <hr>
-    <div id="emails-view">
-        <ul id="email">
-        </ul>
+    <div id="emailsview">
+        <h1 id = "mail"></h1>
     </div>
     <div id="compose-view">
         <h3>New Email</h3>
